--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title: Not Pure Poole
+title: cqbzljh
 description: A simple, beautiful, and powerful Jekyll theme for blogs
 url: https://cqbzljh.github.io
 avatar: /avatar.jpeg
@@ -29,14 +29,14 @@ exclude:
 
 # Optimize Jekyl SEO Tag
 twitter:
-  username: vszhub
+  username: cqbzljh
   card: summary
 logo: logo.png
 social:
   name: Songzi Vong
   links:
-    - https://twitter.com/vszhub
-    - https://github.com/vszhub
+    - https://twitter.com/cqbzljh
+    - https://github.com/cqbzljh
 google_site_verification: xxxxx
 lang: en
 
@@ -54,6 +54,6 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Songzi Vong
-  url: https://github.com/vszhub/
-  email: vszhub@gmail.com
+  name: cqbzljh
+  url: https://github.com/cqbzljh/
+  email: 799839896@qq.com
