--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: cqbzljh
-description: A simple, beautiful, and powerful Jekyll theme for blogs
+description: cqbzljh's blog
 url: https://cqbzljh.github.io
 avatar: /avatar.jpeg
 paginate: 5
